Prevent line breaks in form labels

--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -35,3 +35,7 @@
     font-size: 90%;
     font-style: italic;
 }
+
+.control-label {
+    white-space: nowrap;
+}
